--- a/public/reservation-solde-confirme.html
+++ b/public/reservation-solde-confirme.html
@@ -63,18 +63,20 @@
             transparent 60%
           ),
           linear-gradient(135deg, #f5f7fb 0%, #f1f0ff 100%);
+        overflow-x: hidden;
       }
 
       .wrap {
         min-height: 100%;
         display: grid;
         place-items: center;
-        padding: 32px;
+        padding: clamp(16px, 4vw, 32px);
       }
 
       .stage {
         position: relative;
-        width: min(1180px, 95vw);
+        width: min(1180px, 100%);
+        margin-inline: auto;
       }
 
       .copyright {
