Annulation: placeholder textarea plus visible couleur 374151 avec important pour tous les navigateurs

--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -55,8 +55,20 @@
         color: #111827;
       }
       textarea::placeholder {
-        color: #6b7280;
-        opacity: 1;
+        color: #374151 !important;
+        opacity: 1 !important;
+      }
+      textarea::-webkit-input-placeholder {
+        color: #374151 !important;
+        opacity: 1 !important;
+      }
+      textarea::-moz-placeholder {
+        color: #374151 !important;
+        opacity: 1 !important;
+      }
+      textarea:-ms-input-placeholder {
+        color: #374151 !important;
+        opacity: 1 !important;
       }
       .panel.color4-alt .inner {
         max-width: 980px;
