--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -195,8 +195,8 @@
         .confirm-box h4{ margin:0 0 8px 0; color:#111827; }
         .confirm-actions{ display:flex; gap:10px; justify-content:flex-end; margin-top:14px; }
         .btn{ border:none; border-radius:10px; padding:12px 18px; font-weight:600; cursor:pointer; display:flex; align-items:center; justify-content:center; min-height:44px; font-size:14px; transition:all 0.2s ease; }
-        .btn.cancel{ background:#f3f4f6; color:#374151; border:1px solid #d1d5db; }
-        .btn.cancel:hover{ background:#e5e7eb; }
+        .btn.cancel{ background:#d1d5db; color:#111827; border:1px solid #9ca3af; font-weight:700; }
+        .btn.cancel:hover{ background:#9ca3af; color:#000; }
         .btn.danger{ background:linear-gradient(135deg,#ef4444,#dc2626); color:#fff; box-shadow:0 2px 8px rgba(239,68,68,0.3); }
         .btn.danger:hover{ background:linear-gradient(135deg,#dc2626,#b91c1c); transform:translateY(-1px); box-shadow:0 4px 12px rgba(239,68,68,0.4); }
       `
