--- a/public/reservation-confirmee.html
+++ b/public/reservation-confirmee.html
@@ -245,6 +245,7 @@
         );
         -webkit-mask: linear-gradient(#000 0 0) content-box,
           linear-gradient(#000 0 0);
+        mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
         -webkit-mask-composite: xor;
         mask-composite: exclude;
         animation: spin 6s linear infinite;
