--- a/public/admin.html
+++ b/public/admin.html
@@ -476,8 +476,8 @@
     </div>
 
     <script>
-      const API_LIST = '/api/admin/list'
-      const API_DETAIL = '/api/admin/detail'
+      const API_LIST = '/api/admin?action=list'
+      const API_DETAIL = '/api/admin?action=detail'
       let ADMIN_KEY = ''
       let currentRows = []
 
