--- a/public/admin.html
+++ b/public/admin.html
@@ -581,6 +581,16 @@
               r.status === 'balancePay' ||
               (r.balancePaidAt && String(r.balancePaidAt).length > 0)
 
+            // Debug: afficher les données de la réservation
+            console.log(
+              'Réservation:',
+              r.name,
+              'cancelStatus:',
+              r.cancelStatus,
+              'status:',
+              r.status
+            )
+
             // Vérifier si demande d'annulation en attente
             const hasCancelPending = r.cancelStatus === 'pending'
 
