--- a/public/admin.html
+++ b/public/admin.html
@@ -56,11 +56,44 @@
         margin: 8px 0 18px 0;
         color: var(--muted);
       }
-      .filters {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-      }
+             .filters {
+         display: flex;
+         gap: 10px;
+         align-items: center;
+       }
+       .tabs {
+         display: flex;
+         gap: 2px;
+         padding: 0 22px;
+         border-bottom: 1px solid var(--border);
+       }
+       .tab-btn {
+         padding: 12px 20px;
+         border: none;
+         background: transparent;
+         color: var(--muted);
+         cursor: pointer;
+         border-bottom: 2px solid transparent;
+         font-weight: 500;
+         transition: all 0.2s ease;
+       }
+       .tab-btn:hover {
+         color: var(--text);
+         background: rgba(0, 0, 0, 0.02);
+       }
+       .tab-btn.active {
+         color: var(--primary);
+         border-bottom-color: var(--primary);
+         background: rgba(93, 63, 211, 0.05);
+       }
+       .sub-filters {
+         padding: 16px 22px 0 22px;
+       }
+       .sub-filter-group {
+         display: flex;
+         gap: 10px;
+         align-items: center;
+       }
       .input,
       .select {
         height: 36px;
@@ -416,18 +449,42 @@
               Suivi complet des séjours, paiements et annulations
             </div>
           </div>
-          <div class="filters">
-            <input id="filterText" class="input" placeholder="Filtrer" />
-            <select id="filterStatus" class="select">
-              <option value="">Tous les statuts</option>
-              <option value="pending">En attente</option>
-              <option value="accepted">Acceptée</option>
-              <option value="depositPay">Acompte OK</option>
-              <option value="refused">Refusée</option>
-              <option value="canceled">Annulée</option>
-              <option value="balancePay">Solde OK</option>
-            </select>
-          </div>
+                     <div class="filters">
+             <input id="filterText" class="input" placeholder="Filtrer" />
+             <select id="filterStatus" class="select">
+               <option value="">Tous les statuts</option>
+               <option value="pending">En attente</option>
+               <option value="accepted">Acceptée</option>
+               <option value="depositPay">Acompte OK</option>
+               <option value="refused">Refusée</option>
+               <option value="canceled">Annulée</option>
+               <option value="balancePay">Solde OK</option>
+             </select>
+           </div>
+         </div>
+         <div class="tabs">
+           <button class="tab-btn active" data-tab="actives">Actives</button>
+           <button class="tab-btn" data-tab="archives">Archives</button>
+           <button class="tab-btn" data-tab="all">Toutes</button>
+         </div>
+         <div class="sub-filters">
+           <div id="activesSubFilters" class="sub-filter-group">
+             <select id="activesFilter" class="select">
+               <option value="all">Tout</option>
+               <option value="current">En cours</option>
+               <option value="future">Futures</option>
+             </select>
+           </div>
+           <div id="archivesSubFilters" class="sub-filter-group" style="display: none;">
+             <select id="archivesFilter" class="select">
+               <option value="1month">1 mois</option>
+               <option value="3months">3 mois</option>
+               <option value="6months">6 mois</option>
+               <option value="1year">1 an</option>
+               <option value="all">Tout</option>
+             </select>
+           </div>
+         </div>
         </div>
         <div class="toolbar">
           <div class="muted">Tri par arrivée croissante</div>
@@ -527,8 +584,10 @@
     <script>
       const API_LIST = '/api/admin?action=list'
       const API_DETAIL = '/api/admin?action=detail'
-      let ADMIN_KEY = ''
-      let currentRows = []
+             let ADMIN_KEY = ''
+       let currentRows = []
+       let currentTab = 'actives'
+       let currentSubFilter = 'all'
 
       function frStatus(s) {
         return s === 'pending'
@@ -587,25 +646,81 @@
         return j.data || []
       }
 
-      function renderRows(rows) {
-        const tbody = document.querySelector('#table tbody')
-        const status = document.getElementById('filterStatus').value
-        const text = document
-          .getElementById('filterText')
-          .value.trim()
-          .toLowerCase()
-        let data = rows
-        if (status) data = data.filter((r) => r.status === status)
-        if (text) {
-          data = data.filter((r) =>
-            `${r.name || ''} ${r.email || ''} ${r.token || ''}`
-              .toLowerCase()
-              .includes(text)
-          )
-        }
-        data = data.sort(
-          (a, b) => new Date(a.startDate) - new Date(b.startDate)
-        )
+             function renderRows(rows) {
+         const tbody = document.querySelector('#table tbody')
+         const status = document.getElementById('filterStatus').value
+         const text = document
+           .getElementById('filterText')
+           .value.trim()
+           .toLowerCase()
+         let data = rows
+
+         // Filtrage par onglet principal
+         const now = new Date()
+         const oneMonthAgo = new Date(now.getTime() - 30 * 24 * 60 * 60 * 1000)
+
+         if (currentTab === 'actives') {
+           // Réservations actives : futures + en cours + terminées depuis moins d'1 mois
+           data = data.filter((r) => {
+             const endDate = new Date(r.endDate)
+             return endDate >= oneMonthAgo
+           })
+         } else if (currentTab === 'archives') {
+           // Réservations archivées : terminées depuis plus d'1 mois
+           data = data.filter((r) => {
+             const endDate = new Date(r.endDate)
+             return endDate < oneMonthAgo
+           })
+         }
+         // currentTab === 'all' : pas de filtrage
+
+         // Filtrage par sous-filtre
+         if (currentTab === 'actives' && currentSubFilter !== 'all') {
+           if (currentSubFilter === 'current') {
+             // Séjours en cours uniquement
+             data = data.filter((r) => {
+               const startDate = new Date(r.startDate)
+               const endDate = new Date(r.endDate)
+               return now >= startDate && now <= endDate
+             })
+           } else if (currentSubFilter === 'future') {
+             // Séjours futurs uniquement
+             data = data.filter((r) => {
+               const startDate = new Date(r.startDate)
+               return now < startDate
+             })
+           }
+         } else if (currentTab === 'archives' && currentSubFilter !== 'all') {
+           const periods = {
+             '1month': 30,
+             '3months': 90,
+             '6months': 180,
+             '1year': 365
+           }
+           const daysAgo = periods[currentSubFilter]
+           const periodAgo = new Date(now.getTime() - daysAgo * 24 * 60 * 60 * 1000)
+
+           data = data.filter((r) => {
+             const endDate = new Date(r.endDate)
+             return endDate >= periodAgo
+           })
+         }
+
+         // Filtrage par statut
+         if (status) data = data.filter((r) => r.status === status)
+
+         // Filtrage par texte
+         if (text) {
+           data = data.filter((r) =>
+             `${r.name || ''} ${r.email || ''} ${r.token || ''}`
+               .toLowerCase()
+               .includes(text)
+           )
+         }
+
+         data = data.sort(
+           (a, b) => new Date(a.startDate) - new Date(b.startDate)
+         )
         tbody.innerHTML = data
           .map((r) => {
             const depositPaid =
@@ -794,9 +909,48 @@
       document
         .getElementById('filterText')
         .addEventListener('input', () => renderRows(currentRows))
-      document
-        .getElementById('filterStatus')
-        .addEventListener('change', () => renderRows(currentRows))
+             document
+         .getElementById('filterStatus')
+         .addEventListener('change', () => renderRows(currentRows))
+
+       // Gestion des onglets
+       document.addEventListener('click', (ev) => {
+         const tabBtn = ev.target.closest('.tab-btn')
+         if (tabBtn) {
+           const tab = tabBtn.getAttribute('data-tab')
+           if (tab !== currentTab) {
+             // Mettre à jour l'onglet actif
+             document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'))
+             tabBtn.classList.add('active')
+             currentTab = tab
+
+             // Réinitialiser le sous-filtre
+             currentSubFilter = 'all'
+
+             // Afficher/masquer les sous-filtres appropriés
+             document.getElementById('activesSubFilters').style.display = tab === 'actives' ? 'block' : 'none'
+             document.getElementById('archivesSubFilters').style.display = tab === 'archives' ? 'block' : 'none'
+
+             // Réinitialiser les sélecteurs
+             document.getElementById('activesFilter').value = 'all'
+             document.getElementById('archivesFilter').value = '1month'
+
+             // Re-rendre les données
+             renderRows(currentRows)
+           }
+         }
+       })
+
+       // Gestion des sous-filtres
+       document.getElementById('activesFilter').addEventListener('change', (e) => {
+         currentSubFilter = e.target.value
+         renderRows(currentRows)
+       })
+
+       document.getElementById('archivesFilter').addEventListener('change', (e) => {
+         currentSubFilter = e.target.value
+         renderRows(currentRows)
+       })
 
       // Login
       async function doLogin() {
