--- a/public/admin.html
+++ b/public/admin.html
@@ -66,6 +66,7 @@
          gap: 2px;
          padding: 0 22px;
          border-bottom: 1px solid var(--border);
+         background: #fff;
        }
        .tab-btn {
          padding: 12px 20px;
@@ -88,6 +89,7 @@
        }
        .sub-filters {
          padding: 16px 22px 0 22px;
+         background: #fff;
        }
        .sub-filter-group {
          display: flex;
@@ -103,16 +105,18 @@
         background: #fff;
         color: var(--text);
       }
-      .toolbar {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 22px 16px 22px;
-        border-bottom: 1px solid var(--border);
-      }
-      .table-wrap {
-        overflow: auto;
-      }
+             .toolbar {
+         display: flex;
+         align-items: center;
+         justify-content: space-between;
+         padding: 0 22px 16px 22px;
+         border-bottom: 1px solid var(--border);
+         background: #fff;
+       }
+             .table-wrap {
+         overflow: auto;
+         background: #fff;
+       }
       .card-footer {
         padding: 12px 22px 18px 22px;
         border-top: 1px solid var(--border);
