--- a/public/admin.html
+++ b/public/admin.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tableau de bord – Réservations</title>
     <style>
-      :root {
-        --bg: #0b0d10;
-        --panel: #ffffff;
-        --text: #0f172a;
-        --muted: #6b7280;
-        --primary: #5d3fd3;
-        --border: #e5e7eb;
-        --row: #f8fafc;
-        --badge-bg: #eef2ff;
-        --badge-text: #4338ca;
-      }
+             :root {
+         --bg: #0b0d10;
+         --panel: #ffffff;
+         --text: #0f172a;
+         --muted: #6b7280;
+         --primary: #5d3fd3;
+         --border: #e5e7eb;
+         --row: #f8fafc;
+         --badge-bg: #eef2ff;
+         --badge-text: #4338ca;
+         --radius: 14px;
+       }
       * {
         box-sizing: border-box;
       }
@@ -34,12 +35,12 @@
         position: relative;
         z-index: 1;
       }
-      .card {
-        background: var(--panel);
-        border: 1px solid var(--border);
-        border-radius: 14px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
-      }
+             .card {
+         background: var(--panel);
+         border: 1px solid var(--border);
+         border-radius: var(--radius);
+         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+       }
       .header {
         display: flex;
         align-items: center;
@@ -110,24 +111,30 @@
          align-items: center;
          justify-content: space-between;
          padding: 0 22px 16px 22px;
-         border-bottom: 1px solid var(--border);
+         /* border-bottom: 1px solid var(--border); */ /* Supprimé pour enlever le séparateur */
          background: #fff;
        }
              .table-wrap {
          overflow: auto;
          background: #fff;
+         border-bottom-left-radius: var(--radius);
+         border-bottom-right-radius: var(--radius);
        }
-      .card-footer {
-        padding: 12px 22px 18px 22px;
-        border-top: 1px solid var(--border);
-        text-align: center;
-        color: var(--muted);
-        font-size: 13px;
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
+             .card-footer {
+         padding: 12px 22px 18px 22px;
+         border-top: 1px solid var(--border);
+         text-align: center;
+         color: var(--muted);
+         font-size: 13px;
+         border-bottom-left-radius: var(--radius);
+         border-bottom-right-radius: var(--radius);
+       }
+             table {
+         width: 100%;
+         border-collapse: collapse;
+         border-bottom-left-radius: var(--radius);
+         border-bottom-right-radius: var(--radius);
+       }
       thead th {
         text-align: left;
         font-weight: 700;
@@ -152,11 +159,18 @@
         /* Prix */
         text-align: right;
       }
-      tbody td {
-        padding: 12px 16px;
-        border-bottom: 1px solid var(--border);
-        background: #fff;
-      }
+             tbody td {
+         padding: 12px 16px;
+         border-bottom: 1px solid var(--border);
+         background: #fff;
+       }
+       /* Supprimer les bordures qui créent les "marqueurs" en L */
+       tbody tr:last-child td:first-child {
+         border-bottom-left-radius: var(--radius);
+       }
+       tbody tr:last-child td:last-child {
+         border-bottom-right-radius: var(--radius);
+       }
       /* Alignement spécifique des cellules */
       tbody td:nth-child(3), /* Arrivée */
        tbody td:nth-child(4), /* Départ */
