--- a/public/admin.html
+++ b/public/admin.html
@@ -256,8 +256,8 @@
         color: #991b1b;
       }
       .b-canceled {
-        background: #f1f5f9;
-        color: #0f172a;
+        background: #dc2626;
+        color: #ffffff;
       }
       .b-balancePay {
         background: #eef2ff;
