--- a/public/admin.html
+++ b/public/admin.html
@@ -1162,7 +1162,7 @@
             })
 
             // Appel API pour effectuer les remboursements
-            const response = await fetch('/api/refund', {
+            const response = await fetch('/api/refund-test', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json',
