Regroupement getReservation manageReservation finaliseReservation

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -982,7 +982,7 @@
 
           console.log('Loading reservation data for token:', token)
           const response = await fetch(
-            `/api/getReservation?token=${encodeURIComponent(token)}`
+            `/api/reservations?action=get&token=${encodeURIComponent(token)}`
           )
           const result = await response.json()
 
