--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -338,7 +338,7 @@
           btn.textContent = 'Envoi…'
           try {
             const reason = document.getElementById('reason').value
-            const resp = await fetch('/api/cancellation?action=request', {
+            const resp = await fetch('/api/reservations?action=cancel', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ token, reason })
