--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -542,7 +542,7 @@
             <!-- Image et lien de navigation -->
             <div style="margin-top: 20px; text-align: center">
               <img
-                src="https://maps.googleapis.com/maps/api/streetview?size=400x200&location=16.1581,-61.7761&heading=210&pitch=10&key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg"
+                src="images/guide/01.jpg"
                 alt="Chez Adèle - Fruits et Légumes"
                 style="
                   width: 100%;
@@ -553,34 +553,7 @@
                   margin-bottom: 15px;
                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
                 "
-                onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"
               />
-
-              <!-- Fallback si l'image ne charge pas -->
-              <div
-                style="
-                  display: none;
-                  width: 100%;
-                  max-width: 400px;
-                  height: 200px;
-                  background: linear-gradient(135deg, #4caf50, #45a049);
-                  border-radius: 8px;
-                  margin-bottom: 15px;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  color: white;
-                  font-size: 18px;
-                  font-weight: bold;
-                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                "
-              >
-                <i
-                  class="fas fa-store"
-                  style="font-size: 48px; margin-right: 15px"
-                ></i>
-                Chez Adèle - Fruits et Légumes
-              </div>
 
               <a
                 href="geo:16.1581,-61.7761?q=Chez+Adèle+Fruits+Légumes"
@@ -602,17 +575,6 @@
                 <i class="fas fa-location-arrow"></i>
                 Ouvrir la navigation
               </a>
-
-              <p
-                style="
-                  margin-top: 15px;
-                  font-size: 12px;
-                  color: #666;
-                  font-style: italic;
-                "
-              >
-                Cliquez pour ouvrir votre application de navigation préférée
-              </p>
             </div>
           </div>
         </div>
